src/objects/MerchandiseDeal__c.object
<CustomObject>
    <description>CDs/DVDs/promotional merchandise sold at a venue and the related terms</description>
    <fields>
        <fullName>ArtistRate__c</fullName>
        <label>Artist Rate</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Merchandise Deals</relationshipLabel>
        <relationshipName>MerchandiseDeals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Merch_Rate__c</fullName>
        <formula>1- ArtistRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <label>Seller</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Artist</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
                <value>
                    <fullName>FMI</fullName>
                </value>
                <value>
                    <fullName>Venue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>CD/DVD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Merchandise Deal</label>
    <nameField>
        <displayFormat>MD-{000000}</displayFormat>
        <label>Merchandise Deal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchandise Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;, 
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;) 
&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c 
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
</CustomObject>